--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>My first HTML Page</title>
 </head>
 <body>
-    <p>I am learning <strong>HTML</strong> and <strong>CSS</strong></p>
+    <p>I am learning <b>HTML</b> and <strong>CSS</strong></p>
 </body>
 </html>
